[tool.poetry]
name = "incolumepy.typerite_flask"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/typerite_flask', from=''},
]

license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = [""]
classifiers = [
  "License :: Free For Educational Use",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Education",
  "Topic :: Education:: Testing",
  "Topic :: Utilities"
]
include = [
  "LICENSE",
]
[tool.poetry.dependencies]
python = "3.9.4"
Flask = "^2.0.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
